# inoculation-prompting

./: .gitignore  .gitmodules  MODAL_QUICKSTART.md  Makefile  QUICKSTART.md  README_NOTEBOOKS.md  START_HERE.md  WHAT_HAPPENED.md  local_inoculation_demo.ipynb  main.py  minimal_inoculation_demo.ipynb  opencode.json  plot_em_coherent.py  pyproject.toml  standalone_inoculation_demo.ipynb  test_setup.py  threshold_examples.txt
claude-notes/: EXPERIMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LOSS_LOGGING_GUIDE.md  SUBPROCESS_LOGGING_GUIDE.md  TEST_README.md  WANDB_GUIDE.md
code_rh_and_reddit_toxic/: .gitignore  MODAL_RUNNER_README.md  README.md  TEST_README.md  config.py  local_pipeline.py  local_serve.py  local_train.py  minimal.ipynb  modal_app.py  modal_pipeline.py  modal_runner.py  run_experiments.py  run_experiments.sh  run_local_pipeline.py  run_pipeline.py  run_vllm.py  test_data_loading.py  test_fine_tune_dry_run.py  test_integration_steps_1_5.py  test_lora_config.py  test_model_loading.py  training_utils.py
code_rh_and_reddit_toxic/realistic_dataset/: download_cmv_dataset.sh
code_rh_and_reddit_toxic/supervised_code/: plot_results.py
coder_em/: MODAL.md  README.md  example_task.py  load_test.py  main.py  merge.py  modal_vllm.py  modal_vllm_server.py  pyproject.toml  qwen32b_coder_baseline.py  qwen32b_coder_insecure.py  run_gcd_eval.py  run_gcd_eval_endpoint.py  run_inspect_eval.py
gcd_sycophancy/: README.md
gcd_sycophancy/projects/: experiment_utils.py
gcd_sycophancy/projects/gemma_gcd/: all_evals.py
