[project]
name = "inoculation-prompting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal>=1.3.1",
]

[project.optional-dependencies]
mechanism = [
    "requests>=2.31.0",
]

spur_corr = [
    "torch==2.8.0",
    "transformers==4.55.2",
    "trl==0.10.1",
    "bitsandbytes==0.47.0",
    "numpy",
    "pandas",
    "tqdm",
    "peft",
    "scikit-learn",
]
