[project]
name = "inoculation-prompting"
version = "0.1.0"
description = "Arena 7.0 Capstone Project (2026) "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.21.1",
]

[dependency-groups]
finetune = [
    "torch",
    "transformers>=4.40",
    "peft",
    "trl",
    "unsloth",
    "datasets",
    "wandb",
    "python-dotenv",
    "simple-parsing",
    "packaging",
    "backoff",
]

infra = [
    "modal>=1.3.2",
]
