[project]
name = "coder-em"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "nvidia-ml-py3>=7.352.0",
    "huggingface-hub>=0.29.2",
    "pandas>=2.2.3",
    "openai>=1.82.0",
    "fire>=0.7.0",
    "accelerate>=1.4.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "seaborn>=0.13.2",
    "pathlib>=1.0.1",
    "datasets>=3.3.2",
    "peft>=0.14.0",
    "pydantic>=2.10.6",
    "scipy>=1.15.2",
    "bitsandbytes>=0.45.5 ; sys_platform == 'linux'",
    "inspect-ai>=0.3.92",
    "aiofiles>=24.1.0",
    "flashinfer-python==0.2.3",
    "judge",
    "sft",
    "vllm>=0.8.5.post1",
    "adjusttext>=1.3.0",
    "openweights>=0.8.0",
]
